# untitled-document-app

./: .gitignore  README.md  docker-compose.yml
client/: babel.config.json  package-lock.json  package.json  webpack.config.js
client/src/: index.js  index2.js  styles.scss  test.jsx
client/src/file-upload/: file-service.js  file-upload.jsx  index.js  preview.jsx  read-as-data-url.js  styles.scss
server/: Dockerfile  app.py  pyproject.toml  requirements.txt
server/document_app/: application.py  extensions.py
server/document_app/lib/: elasticsearch.py  filters.py  sqlalchemy.py
server/document_app/models/: account.py  document.py  project.py
server/document_app/services/: document.py
server/document_app/static/: styles.css
server/document_app/templates/: base.jinja2
server/document_app/views/auth/: views.py
server/document_app/views/auth/templates/auth/: login.jinja2  register.jinja2
server/document_app/views/cli/: views.py
server/document_app/views/main/: views.py
server/document_app/views/main/templates/main/: document.jinja2  index.jinja2  project.jinja2  projects.jinja2
server/instance/fixtures/: accounts.yml  projects.yml
