[tool.poetry]
name = "document_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
flask-login = "^0.5.0"
pytesseract = "^0.3.7"
elasticsearch = "^7.10.1"
python-dotenv = "^0.15.0"
textract = "^1.6.3"
shortuuid = "^1.0.1"
filetype = "^1.0.7"
arrow = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
